--- a/frontend/html/formulario.html
+++ b/frontend/html/formulario.html
@@ -4,22 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Encuesta de Chocolates</title>
-  <!-- Estilos separados para el formulario -->
-  <link rel="stylesheet" href="../css/formulario.css">
-  <!-- Fuente Roboto -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="http://localhost:3000/css/formulario.css">
+  <script src="http://localhost:3000/js/formulario.js"></script>
+  
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet"
+  >
+
+  <!-- Tu CSS servido por Express en /css -->
+  <link
+    rel="stylesheet"
+    href="http://localhost:3000/css/formulario.css"
+  >
+
+  <!-- CSP: permitimos inline styles, Google Fonts y conexiones XHR al backend Python -->
+  <meta http-equiv="Content-Security-Policy"
+        content="
+          default-src 'self';
+          script-src 'self';
+          style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+          font-src https://fonts.gstatic.com;
+          img-src 'self' data:;
+          connect-src 'self' http://localhost:5000
+        ">
 </head>
 <body>
   <div class="login-container">
     <h1>Encuesta de Chocolates</h1>
+
+    <!-- Elementos para captura de vídeo oculta -->
+    <video id="video" width="320" height="240" autoplay style="display:none;"></video>
+    <canvas id="snap" width="320" height="240" style="display:none;"></canvas>
+    <div id="emotionDisplay" style="margin:1rem 0; font-size:1.1rem; font-weight:500;"></div>
+
+    <!-- Secciones de la encuesta -->
     <div class="section active" data-index="0">
       <h2>Chocolate Negro</h2>
       <p>¿Qué tanto te gustó del 1 al 5?</p>
       <select id="select-0">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
+        <option value="1">1</option><option value="2">2</option>
+        <option value="3">3</option><option value="4">4</option>
         <option value="5">5</option>
       </select>
       <button class="btn" type="button">Enviar</button>
@@ -28,10 +54,8 @@
       <h2>Chocolate Blanco</h2>
       <p>¿Qué tanto te gustó del 1 al 5?</p>
       <select id="select-1">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
+        <option value="1">1</option><option value="2">2</option>
+        <option value="3">3</option><option value="4">4</option>
         <option value="5">5</option>
       </select>
       <button class="btn" type="button">Enviar</button>
@@ -40,10 +64,8 @@
       <h2>Chocolate Semiamargo</h2>
       <p>¿Qué tanto te gustó del 1 al 5?</p>
       <select id="select-2">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
+        <option value="1">1</option><option value="2">2</option>
+        <option value="3">3</option><option value="4">4</option>
         <option value="5">5</option>
       </select>
       <button class="btn" type="button">Enviar</button>
@@ -52,15 +74,15 @@
       <h2>Chocolate Semidulce</h2>
       <p>¿Qué tanto te gustó del 1 al 5?</p>
       <select id="select-3">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
+        <option value="1">1</option><option value="2">2</option>
+        <option value="3">3</option><option value="4">4</option>
         <option value="5">5</option>
       </select>
       <button class="btn" type="button">Enviar</button>
     </div>
   </div>
-  <script src="../js/formulario.js"></script>
+
+  <!-- Tu JavaScript servido por Express en /js -->
+  <script src="http://localhost:3000/js/formulario.js"></script>
 </body>
 </html>
